Packing slip line break attempted fix

--- a/resources/assets/sass/print.scss
+++ b/resources/assets/sass/print.scss
@@ -553,3 +553,20 @@ p {
 .customers-report * {
   font-size: 12px;
 }
+
+// Attemping line break fix
+
+thead {
+  display: table-row-group;
+}
+tr {
+  page-break-before: always;
+  page-break-after: always;
+  page-break-inside: avoid;
+}
+table {
+  word-wrap: break-word;
+}
+table td {
+  word-break: break-all;
+}
